feat: implement employee transfer with work history tracking