@@ -1,23 +1,25 @@
 package org.example.libraffstore.service;
 
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.example.libraffstore.dto.request.EmployeeRequest;
-import org.example.libraffstore.entity.Employee;
 import org.example.libraffstore.dto.response.EmployeeResponse;
+import org.example.libraffstore.entity.Employee;
 import org.example.libraffstore.entity.Position;
 import org.example.libraffstore.entity.Store;
+import org.example.libraffstore.enums.HistoryType;
 import org.example.libraffstore.exception.AlreadyExistsException;
 import org.example.libraffstore.exception.BusinessException;
 import org.example.libraffstore.exception.NotFoundException;
+import org.example.libraffstore.mapper.EmployeeMapper;
 import org.example.libraffstore.repository.EmployeeRepository;
 import org.example.libraffstore.repository.PositionRepository;
 import org.example.libraffstore.repository.StoreRepository;
+import org.example.libraffstore.validator.EmployeeValidator;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.math.BigDecimal;
+import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,113 +28,134 @@ public class EmployeeService {
     private final EmployeeRepository employeeRepository;
     private final StoreRepository storeRepository;
     private final PositionRepository positionRepository;
+    private final EmployeeWorkHistoryService workHistoryService;
+    private final EmployeeValidator employeeValidator;
+    private final EmployeeMapper employeeMapper;
 
-    //CREATE
     @Transactional
-    public EmployeeResponse addEmployee(EmployeeRequest employeeRequest) {
+    public EmployeeResponse addEmployee(EmployeeRequest request) {
 
-        if(employeeRepository.existsByFIN(employeeRequest.getFIN())) {
-            throw new AlreadyExistsException("Bu FIN ilə işçi artıq mövcuddur: " + employeeRequest.getFIN());
-        }
-        if(employeeRepository.existsByEmail(employeeRequest.getEmail())){
-            throw new AlreadyExistsException("Bu email artıq istifadə olunur: " + employeeRequest.getEmail());
-        }
-        if(employeeRepository.existsByPhone(employeeRequest.getPhone())){
-            throw new AlreadyExistsException("Bu telefon nömrəsi artıq istifadə olunur: " + employeeRequest.getPhone());
-        }
-        Store store = storeRepository.findById(employeeRequest.getStoreId())
-                .orElseThrow(() -> new NotFoundException("Mağaza tapılmadı. ID: " + employeeRequest.getStoreId()));
+        Store store = storeRepository.findById(request.getStoreId())
+                .orElseThrow(() -> new NotFoundException("Mağaza tapılmadı. ID: " + request.getStoreId()));
 
-        Position position = positionRepository.findById(employeeRequest.getPositionId())
-                .orElseThrow(() -> new NotFoundException("Vəzifə tapılmadı. ID: " + employeeRequest.getPositionId()));
+        Position position = positionRepository.findById(request.getPositionId())
+                .orElseThrow(() -> new NotFoundException("Vəzifə tapılmadı. ID: " + request.getPositionId()));
 
-        validateSalaryRange(employeeRequest.getSalary(), position);
+        employeeValidator.validateSalaryRange(request.getSalary(), position);
 
-        Employee employee = new Employee();
-        employee.setFIN(employeeRequest.getFIN());
-        employee.setFirstName(employeeRequest.getFirstName());
-        employee.setLastName(employeeRequest.getLastName());
-        employee.setPassword(employeeRequest.getPassword());
-        employee.setIsActive(employeeRequest.getIsActive() != null ? employeeRequest.getIsActive() : false);
-        employee.setEmail(employeeRequest.getEmail());
-        employee.setPhone(employeeRequest.getPhone());
-        employee.setSalary(employeeRequest.getSalary());
-        employee.setDateEmployed(employeeRequest.getDateEmployed());
-        employee.setDateUnemployed(employeeRequest.getDateUnemployed());
-        employee.setStore(store);
-        employee.setPosition(position);
+        return employeeRepository.findByFIN(request.getFIN())
+                .map(existing -> {
+                    if (existing.getIsActive())
+                        throw new AlreadyExistsException("Bu FIN ilə aktiv işçi artıq mövcuddur: " + request.getFIN());
+                    return rehire(existing, request, store, position);
+                })
+                .orElseGet(() -> {
+                    employeeValidator.validateNewEmployee(request.getFIN(), request.getEmail(), request.getPhone());
 
-        Employee saved = employeeRepository.save(employee);
-        return toResponse(saved);
+                    Employee employee = buildEmployee(request, store, position);
+                    Employee saved = employeeRepository.save(employee);
+
+                    workHistoryService.saveHistory(saved, store, position, saved.getSalary(), saved.getDateEmployed(), HistoryType.HIRED);
+
+                    return employeeMapper.toResponse(saved);
+                });
     }
 
-    //READ
     public List<EmployeeResponse> findAll() {
         return employeeRepository.findAll()
                 .stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList());
+                .map(employeeMapper::toResponse)
+                .toList();
     }
 
     public EmployeeResponse findById(Long employeeId) {
         Employee employee = employeeRepository.findById(employeeId)
-                .orElseThrow(() -> new NotFoundException("Işçi tapılmadı. ID: " + employeeId));
-        return toResponse(employee);
+                .orElseThrow(() -> new NotFoundException("İşçi tapılmadı. ID: " + employeeId));
+        return employeeMapper.toResponse(employee);
     }
 
     public List<EmployeeResponse> findAllActive() {
         return employeeRepository.findAllByIsActiveTrue()
                 .stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList());
+                .map(employeeMapper::toResponse)
+                .toList();
     }
 
+    @Transactional
+    public EmployeeResponse updateEmployee(Long employeeId, EmployeeRequest request) {
 
-    //DELETE
+        Employee employee = employeeRepository.findById(employeeId)
+                .orElseThrow(() -> new NotFoundException("İşçi tapılmadı. ID: " + employeeId));
+
+        employeeValidator.validateUpdateEmployee(
+                employeeId, request.getFIN(), request.getEmail(), request.getPhone());
+
+        employee.setFIN(request.getFIN());
+        employee.setFirstName(request.getFirstName());
+        employee.setLastName(request.getLastName());
+        if (request.getPassword() != null && !request.getPassword().isBlank()) {
+            employee.setPassword(request.getPassword());
+        }
+        employee.setEmail(request.getEmail());
+        employee.setPhone(request.getPhone());
+
+        return employeeMapper.toResponse(employeeRepository.save(employee));
+    }
+
     @Transactional
     public void deleteEmployee(Long employeeId) {
-       Employee employee = employeeRepository.findById(employeeId)
-               .orElseThrow(() -> new NotFoundException("Işçi tapılmadı. ID: " + employeeId));
-       employee.setIsActive(false);
-       employeeRepository.save(employee);
+        Employee employee = employeeRepository.findById(employeeId)
+                .orElseThrow(() -> new NotFoundException("İşçi tapılmadı. ID: " + employeeId));
+
+        if (!employee.getIsActive())
+            throw new BusinessException("İşçi artıq deaktivdir.");
+
+        workHistoryService.closeCurrentHistory(employeeId);
+
+        employee.setIsActive(false);
+        employee.setDateUnemployed(LocalDate.now());
+        employeeRepository.save(employee);
+
+        workHistoryService.saveHistory(employee, employee.getStore(), employee.getPosition(),
+                employee.getSalary(), LocalDate.now(), HistoryType.RESIGNED);
     }
 
-    private void validateSalaryRange(BigDecimal salary, Position position){
-        if(position.getMinSalary() != null && salary.compareTo(BigDecimal.valueOf(position.getMinSalary())) < 0){
-            throw new BusinessException(String.format(
-                    "%s vəzifəsi üçün minimum maaş %d AZN-dir. Daxil edilən: %.2f AZN",
-                    position.getPositionType().name(), position.getMinSalary(), salary
-            ));
+    private EmployeeResponse rehire(Employee employee, EmployeeRequest request, Store store, Position position) {
+        employee.setFirstName(request.getFirstName());
+        employee.setLastName(request.getLastName());
+        if (request.getPassword() != null && !request.getPassword().isBlank()) {
+            employee.setPassword(request.getPassword());
         }
-        if (position.getMaxSalary() != null && salary.compareTo(BigDecimal.valueOf(position.getMaxSalary())) > 0) {
-            throw new BusinessException(String.format(
-                    "%s vəzifəsi üçün maksimum maaş %d AZN-dir. Daxil edilən: %.2f AZN",
-                    position.getPositionType().name(), position.getMaxSalary(), salary
-            ));
-        }
+        employee.setEmail(request.getEmail());
+        employee.setPhone(request.getPhone());
+        employee.setSalary(request.getSalary());
+        employee.setStore(store);
+        employee.setPosition(position);
+        employee.setIsActive(true);
+        employee.setDateEmployed(request.getDateEmployed());
+        employee.setDateUnemployed(null);
+
+        Employee saved = employeeRepository.save(employee);
+
+        workHistoryService.saveHistory(saved, store, position, saved.getSalary(), saved.getDateEmployed(), HistoryType.REHIRED);
+
+        return employeeMapper.toResponse(saved);
     }
 
-    //MAPPER
-    private EmployeeResponse toResponse(Employee employee) {
-        EmployeeResponse response = new EmployeeResponse();
-        response.setId(employee.getId());
-        response.setFIN(employee.getFIN());
-        response.setFirstName(employee.getFirstName());
-        response.setLastName(employee.getLastName());
-        response.setEmail(employee.getEmail());
-        response.setPhone(employee.getPhone());
-        response.setIsActive(employee.getIsActive());
-        response.setSalary(employee.getSalary());
-        response.setDateEmployed(employee.getDateEmployed());
-        response.setDateUnemployed(employee.getDateUnemployed());
-
-        if (employee.getStore() != null) {
-            response.setStoreName(employee.getStore().getName());
-            response.setStoreAddress(employee.getStore().getAddress());
-        }
-        if (employee.getPosition() != null) {
-            response.setPositionType(employee.getPosition().getPositionType());
-        }
-        return response;
+    private static Employee buildEmployee(EmployeeRequest request, Store store, Position position) {
+        Employee employee = new Employee();
+        employee.setFIN(request.getFIN());
+        employee.setFirstName(request.getFirstName());
+        employee.setLastName(request.getLastName());
+        employee.setPassword(request.getPassword());
+        employee.setIsActive(true);
+        employee.setEmail(request.getEmail());
+        employee.setPhone(request.getPhone());
+        employee.setSalary(request.getSalary());
+        employee.setDateEmployed(request.getDateEmployed());
+        employee.setDateUnemployed(null);
+        employee.setStore(store);
+        employee.setPosition(position);
+        return employee;
     }
 }
